<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:iconSpaceReserved="false">

    <PreferenceCategory
        app:title="@string/setting_group_move"
        app:iconSpaceReserved="false">
        <ListPreference
            app:key="setting_joystick_type"
            app:title="@string/setting_joystick_type"
            app:entries="@array/array_joystick_type"
            app:entryValues="@array/array_joystick_type_values"
            app:dialogTitle="@string/setting_joystick_type"
            app:defaultValue="0"
            app:iconSpaceReserved="false">
        </ListPreference>

        <EditTextPreference
            app:key="setting_walk"
            app:title="@string/setting_walk"
            app:defaultValue="@string/setting_walk_default"
            app:summary="@string/setting_walk_default"
            app:iconSpaceReserved="false"/>

        <EditTextPreference
            app:key="setting_run"
            app:title="@string/setting_run"
            app:defaultValue="@string/setting_run_default"
            app:summary="@string/setting_run_default"
            app:iconSpaceReserved="false"/>

        <EditTextPreference
            app:key="setting_bike"
            app:title="@string/setting_bike"
            app:defaultValue="@string/setting_bike_default"
            app:summary="@string/setting_bike_default"
            app:iconSpaceReserved="false"/>

        <EditTextPreference
            app:key="setting_altitude"
            app:title="@string/setting_altitude"
            app:defaultValue="@string/setting_altitude_default"
            app:summary="@string/setting_altitude_default"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/setting_group_location_offset"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="setting_random_offset"
            app:title="@string/setting_random_offset"
            app:summary="@string/setting_random_offset_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <EditTextPreference
            app:key="setting_lat_max_offset"
            app:title="@string/setting_lat_max_offset"
            app:defaultValue="@string/setting_random_offset_default"
            app:summary="@string/setting_random_offset_default"
            app:iconSpaceReserved="false"/>
        <EditTextPreference
            app:key="setting_lon_max_offset"
            app:title="@string/setting_lon_max_offset"
            app:defaultValue="@string/setting_random_offset_default"
            app:summary="@string/setting_random_offset_default"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/setting_group_root"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="use_root_mode"
            app:title="@string/setting_root_mode"
            app:summary="@string/setting_root_mode_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false"/>

        <Preference
            app:key="setting_root_status"
            app:title="@string/setting_root_status"
            app:summary="@string/setting_root_status_unknown"
            app:iconSpaceReserved="false"
            app:enabled="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/setting_group_log"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="setting_log_off"
            app:title="@string/setting_log_off"
            app:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <EditTextPreference
            app:key="setting_history_expiration"
            app:title="@string/setting_history_expiration"
            app:defaultValue="@string/history_expiration"
            app:summary="@string/history_expiration"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/setting_group_appearance"
        app:iconSpaceReserved="false">

        <ListPreference
            app:key="setting_theme_mode"
            app:title="@string/setting_theme_mode"
            app:entries="@array/array_theme_mode"
            app:entryValues="@array/array_theme_mode_values"
            app:defaultValue="system"
            app:summary="@string/setting_theme_follow_system"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/setting_group_data"
        app:iconSpaceReserved="false">

        <Preference
            app:key="setting_backup_data"
            app:title="@string/setting_backup_data"
            app:summary="@string/setting_backup_data_summary"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/setting_group_about"
        app:iconSpaceReserved="false">

        <Preference
            app:key="setting_version"
            app:title="@string/setting_version"
            app:iconSpaceReserved="false"/>

        <Preference
            app:key="setting_author"
            app:title="@string/setting_author"
            app:defaultValue="@string/app_author"
            app:summary="@string/app_author"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
</PreferenceScreen>