<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/nav_menu_history" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_save"
            android:title="@string/nav_menu_favorites" />
        <item
            android:id="@+id/nav_pinned_manager"
            android:icon="@drawable/ic_fly"
            android:title="@string/nav_menu_pinned_manager" />
        <item
            android:id="@+id/nav_import"
            android:icon="@drawable/ic_leading_in"
            android:title="导入分享" />
        <item
            android:id="@+id/nav_multipoint"
            android:icon="@drawable/ic_gps"
            android:title="@string/nav_menu_multipoint" />
    </group>
    
    <group>
        <item android:title="@string/nav_menu_settings">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_settings"
                    android:title="@string/nav_menu_settings" />
                <item
                    android:id="@+id/nav_dev"
                    android:icon="@drawable/ic_menu_dev"
                    android:title="@string/nav_menu_dev" />
            </menu>
        </item>
    </group>

    <item android:title="@string/nav_menu_more">
        <menu>
            <item
                android:id="@+id/nav_update"
                android:icon="@drawable/ic_menu_upgrade"
                android:title="@string/nav_menu_upgrade" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_feedback"
                android:title="@string/nav_menu_feedback" />
        </menu>
    </item>

</menu>
