<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/label_longitude"
        style="@style/AppTheme.TextInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/joystick_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="longitude"
            android:inputType="numberDecimal"
            android:digits="-0123456789." />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/label_latitude"
        style="@style/AppTheme.TextInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/joystick_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="latitude"
            android:inputType="numberDecimal"
            android:digits="-0123456789." />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/RadioGroupMapType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/pos_type_gcj02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/input_position_gcj02" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/input_position_gps" />
    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="end">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/input_position_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_position_cancel"
            style="@style/AppTheme.Button.Outlined" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/input_position_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/input_position_ok"
            style="@style/AppTheme.Button" />

    </LinearLayout>
</LinearLayout>