<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/main_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.amap.api.maps.MapView
            android:id="@+id/amapView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clickable="true"
            android:focusable="true" />

        <!-- 地图类型切换 - 无背景，按钮本身半透明 -->
        <RadioGroup
            android:id="@+id/RadioGroupMapType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/mapNormal"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:checked="true"
                android:text="@string/map_pic_normal"
                android:textColor="@color/md_primary"
                android:buttonTint="@color/md_primary"
                android:textSize="11sp"
                android:background="#80FFFFFF"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

            <RadioButton
                android:id="@+id/mapSatellite"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/map_pic_sate"
                android:textColor="@color/md_primary"
                android:buttonTint="@color/md_primary"
                android:textSize="11sp"
                android:background="#80FFFFFF"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />
        </RadioGroup>

        <!-- 右侧控制按钮组 - 只保留坐标和当前位置按钮 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="160dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/input_pos"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/input_button"
                app:srcCompat="@drawable/ic_input"
                app:tint="@color/colorAccent" />

            <ImageButton
                android:id="@+id/cur_position"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginTop="4dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/cur_position"
                app:srcCompat="@drawable/ic_home_position"
                app:tint="@color/colorAccent" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="10sp"
            android:text="@string/app_statement"
            tools:ignore="SmallSp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>