<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_xl">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/spacing_md"
        android:text="@string/app_agreement"
        android:textAppearance="?attr/textAppearanceHeadlineSmall"
        android:textColor="@color/md_onSurface" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/spacing_md"
        android:layout_height="360dp">

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_md"
            android:lineSpacingMultiplier="1.2"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="@color/md_onSurfaceVariant" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tv_cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/app_btn_disagree"
            style="@style/AppTheme.Button.Outlined" />

        <Space
            android:layout_width="60dp"
            android:layout_height="match_parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tv_agree"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/app_btn_agree"
            style="@style/AppTheme.Button" />
    </LinearLayout>
</LinearLayout>
